--- a/public/styles.css
+++ b/public/styles.css
@@ -5,13 +5,18 @@
 
 @font-face {
   font-family: Sofia-Pro;
-  src: url(assets/sofia_pro_bold.otf);
+  src: url(assets/sofia_pro_bold-webfont.woff2);
   font-weight: 700;
 }
 @font-face {
   font-family: Sofia-Pro;
-  src: url(assets/sofia_pro_regular.otf);
+  src: url(assets/sofia_pro_regular-webfont.woff2);
   font-weight: 400;
+}
+@font-face {
+  font-family: Sofia-Pro;
+  src: url(assets/sofia_pro_medium-webfont.woff2);
+  font-weight: 500;
 }
 a {
   text-decoration: none;
@@ -218,13 +223,13 @@ h2 {
 }
 
 h4 {
-  font-weight: 400;
+  font-weight: 500;
   font-size: 1.5em;
   margin: 0;
 }
 
 h5 {
-  font-weight: 400;
+  font-weight: 500;
   font-size: 1em;
   margin: 0;
   color: #cccccc;
